--- a/MindMap/MindMap.vcxproj.filters
+++ b/MindMap/MindMap.vcxproj.filters
@@ -155,6 +155,12 @@
     <ClCompile Include="GeneratedFiles\Release\moc_GraphicsNode.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="PasteNodeCommand.cpp">
+      <Filter>Source Files\Command</Filter>
+    </ClCompile>
+    <ClCompile Include="CutNodeCommand.cpp">
+      <Filter>Source Files\Command</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="GraphicalUI.ui">
@@ -230,6 +236,12 @@
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_GraphicalUI.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CutNodeCommand.h">
+      <Filter>Header Files\Command</Filter>
+    </ClInclude>
+    <ClInclude Include="PasteNodeCommand.h">
+      <Filter>Header Files\Command</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
