--- a/MindMap/MindMap.vcxproj.filters
+++ b/MindMap/MindMap.vcxproj.filters
@@ -161,6 +161,9 @@
     <ClCompile Include="CutNodeCommand.cpp">
       <Filter>Source Files\Command</Filter>
     </ClCompile>
+    <ClCompile Include="GraphicsMindMap.cpp">
+      <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="GraphicalUI.ui">
@@ -242,6 +245,9 @@
     </ClInclude>
     <ClInclude Include="PasteNodeCommand.h">
       <Filter>Header Files\Command</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphicsMindMap.h">
+      <Filter>Header Files\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
