--- a/MindMapUnitTesting/MindMapUnitTesting.vcxproj
+++ b/MindMapUnitTesting/MindMapUnitTesting.vcxproj
@@ -144,8 +144,10 @@
     <ClCompile Include="..\MindMap\Component.cpp" />
     <ClCompile Include="..\MindMap\ComponentFactory.cpp" />
     <ClCompile Include="..\MindMap\Composite.cpp" />
+    <ClCompile Include="..\MindMap\CutNodeCommand.cpp" />
     <ClCompile Include="..\MindMap\DeleteComponentCommand.cpp" />
     <ClCompile Include="..\MindMap\EditComponentCommand.cpp" />
+    <ClCompile Include="..\MindMap\GraphicsMindMap.cpp" />
     <ClCompile Include="..\MindMap\GraphicsNode.cpp" />
     <ClCompile Include="..\MindMap\InsertAChildNodeCmd.cpp" />
     <ClCompile Include="..\MindMap\InsertAParentNodeCmd.cpp" />
@@ -153,6 +155,7 @@
     <ClCompile Include="..\MindMap\IObserver.cpp" />
     <ClCompile Include="..\MindMap\Model.cpp" />
     <ClCompile Include="..\MindMap\Node.cpp" />
+    <ClCompile Include="..\MindMap\PasteNodeCommand.cpp" />
     <ClCompile Include="..\MindMap\PresentationModel.cpp" />
     <ClCompile Include="..\MindMap\Root.cpp" />
     <ClCompile Include="..\MindMap\Subject.cpp" />
