--- a/MindMap/MindMap.vcxproj
+++ b/MindMap/MindMap.vcxproj
@@ -138,13 +138,16 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ChangeParentCommand.cpp" />
+    <ClCompile Include="Circle.cpp" />
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="CommandManger.cpp" />
     <ClCompile Include="Component.cpp" />
     <ClCompile Include="ComponentFactory.cpp" />
     <ClCompile Include="Composite.cpp" />
     <ClCompile Include="CutNodeCommand.cpp" />
+    <ClCompile Include="Decorator.cpp" />
     <ClCompile Include="DeleteComponentCommand.cpp" />
+    <ClCompile Include="DisplayNodeVisitor.cpp" />
     <ClCompile Include="EditComponentCommand.cpp" />
     <ClCompile Include="GeneratedFiles\Debug\moc_GraphicalUI.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
@@ -186,11 +189,15 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Node.cpp" />
+    <ClCompile Include="NodeVisitor.cpp" />
     <ClCompile Include="PasteNodeCommand.cpp" />
     <ClCompile Include="PresentationModel.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Root.cpp" />
+    <ClCompile Include="SaveNodeVisitor.cpp" />
     <ClCompile Include="Subject.cpp" />
     <ClCompile Include="TextUIView.cpp" />
+    <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="GraphicalUI.h">
@@ -234,15 +241,21 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ChangeParentCommand.h" />
+    <ClInclude Include="Circle.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommandManger.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="ComponentFactory.h" />
     <ClInclude Include="Composite.h" />
     <ClInclude Include="CutNodeCommand.h" />
+    <ClInclude Include="Decorator.h" />
     <ClInclude Include="DeleteComponentCommand.h" />
+    <ClInclude Include="DisplayNodeVisitor.h" />
     <ClInclude Include="EditComponentCommand.h" />
     <ClInclude Include="GeneratedFiles\ui_GraphicalUI.h" />
+    <ClInclude Include="NodeVisitor.h" />
+    <ClInclude Include="SaveNodeVisitor.h" />
+    <ClInclude Include="Triangle.h" />
     <CustomBuild Include="GraphicsNode.h">
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Moc%27ing GraphicsNode.h...</Message>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Moc%27ing GraphicsNode.h...</Message>
@@ -295,6 +308,7 @@
     </CustomBuild>
     <CustomBuild Include="PresentationModel.h" />
     <ClInclude Include="PasteNodeCommand.h" />
+    <ClInclude Include="Rectangle.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Root.h" />
     <ClInclude Include="Subject.h" />
